fixed loader position and weekdays not showing

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -44,8 +44,6 @@
     }
 }
 
-
-
 @media(max-width: 700px){
     .App{
         height: 108vh;
@@ -65,6 +63,9 @@
                 flex-direction: column;
                 justify-content: space-around;
             }
+        }
+        .loader{
+            margin: 0 auto;
         }
     }
     
